Fix flicker

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,17 +54,13 @@
 
 html {
     font-size: 16px;
-    background-color: #ECE6DD;
+    --background: #ECE6DD;
+    background-color: var(--background);
 }
 
-html,
-body {
-    background-color: #ECE6DD;
-}
-
-html[data-theme="dark"],
-body[data-theme="dark"] {
-    background-color: #111;
+/* Dark mode */
+html[data-theme="dark"] {
+    --background: #111;
 }
 
 * {
